[gd_scene format=3 uid="uid://dqvor5j62ile0"]

[ext_resource type="Script" uid="uid://bp5g1rdyoa7vg" path="res://scripts/ui/GameOver.gd" id="1"]

[sub_resource type="Animation" id="Animation_kp3qx"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}

[sub_resource type="Animation" id="Animation_57v1k"]
resource_name = "fade_in"
length = 2.0
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 2),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_05upv"]
_data = {
&"RESET": SubResource("Animation_kp3qx"),
&"fade_in": SubResource("Animation_57v1k")
}

[node name="GameOver" type="Control" unique_id=347296152]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1")

[node name="Background" type="ColorRect" parent="." unique_id=304616629]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 1)

[node name="FadeRect" type="ColorRect" parent="." unique_id=276177483]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0)

[node name="CenterContainer" type="CenterContainer" parent="." unique_id=1759868391]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="CenterContainer" unique_id=1898201487]
layout_mode = 2
theme_override_constants/separation = 20
alignment = 1

[node name="MessageLabel" type="Label" parent="CenterContainer/VBoxContainer" unique_id=1207512692]
layout_mode = 2
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_font_sizes/font_size = 44
text = "HAS SIDO ENCONTRADO"
horizontal_alignment = 1

[node name="BackToMenuButton" type="Button" parent="CenterContainer/VBoxContainer" unique_id=88877217]
layout_mode = 2
text = "Volver al men√∫"

[node name="AnimationPlayer" type="AnimationPlayer" parent="." unique_id=1298525207]
libraries/ = SubResource("AnimationLibrary_05upv")

[connection signal="pressed" from="CenterContainer/VBoxContainer/BackToMenuButton" to="." method="_on_back_to_menu_pressed"]
